example/sock-shop_testbed/sock-shop_ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gw-ss
spec:
  selector:
    istio: ingress # use Istio default gateway implementation, be careful to this label that should match that of istio-ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs-ss
spec:
  hosts:
  - "*"
  gateways:
  - frontend-gw-ss
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: front-end
